objects/EPA_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>FTTA. Created to store the partner name of the epa agreement</description>
        <inlineHelpText>Name of the partner of the epa agreement.</inlineHelpText>
        <label>Partner Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_cash_contribution__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Partner cash contribution</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_in_kind_contribution__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Partner in-kind contribution</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perf_Per_End_Date__c</fullName>
        <description>Performance Period End Date for the contract.</description>
        <inlineHelpText>Performance Period End Date for the contract.</inlineHelpText>
        <label>Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perf_Per_Start_Date__c</fullName>
        <description>Performance Period Start Date for the contract.</description>
        <inlineHelpText>Performance Period Start Date for the contract.</inlineHelpText>
        <label>Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Investigator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select a Principal Investigator</inlineHelpText>
        <label>Primary Principal Investigator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Primary Principal Investigator)</relationshipLabel>
        <relationshipName>EPA_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal_Investigator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select additional Investigator</inlineHelpText>
        <label>Secondary Principal Investigator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Secondary Principal Investigator)</relationshipLabel>
        <relationshipName>EPA_Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select a Program Manager</inlineHelpText>
        <label>Primary Program Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements</relationshipLabel>
        <relationshipName>EPA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Select Additional PM</inlineHelpText>
        <label>Secondary Program Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EPA Agreements (Secondary Program Manager)</relationshipLabel>
        <relationshipName>EPA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Benefits__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Enter Benefits up to 1000 characters</inlineHelpText>
        <label>Project Benefits</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Officer lookup to contacts</description>
        <inlineHelpText>Project Officer lookup.</inlineHelpText>
        <label>Project Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DCR EPA Agreement (Project Officer)</relationshipLabel>
        <relationshipName>DCR_EPA_Agreement_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>FTTA Application</description>
        <label>Region</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EPA Agreements (Region)</relationshipLabel>
        <relationshipName>EPA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_EPA_Program_Office_s__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Required - Select One</inlineHelpText>
        <label>Related EPA Program Office(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office of the Administrator (AO)</fullName>
                    <label>AO</label>
                </value>
                <value>
                    <fullName>Office of Air and Radiation (OAR)</fullName>
                    <label>OAR</label>
                </value>
                <value>
                    <fullName>Office of the Chief Financial Officer (OCFO)</fullName>
                    <label>OCFO</label>
                </value>
                <value>
                    <fullName>Office of Chemical Safety and Pollution Prevention (OCSPP)</fullName>
                    <label>OCSPP</label>
                </value>
                <value>
                    <fullName>Office of Enforcement and Compliance Assurance (OECA)</fullName>
                    <label>OECA</label>
                </value>
                <value>
                    <fullName>Office of General Counsel (OGC)</fullName>
                    <label>OGC</label>
                </value>
                <value>
                    <fullName>Office of Inspector General (OIG)</fullName>
                    <label>OIG</label>
                </value>
                <value>
                    <fullName>Office of International and Tribal Affairs (OITA)</fullName>
                    <label>OITA</label>
                </value>
                <value>
                    <fullName>Office of Land and Emergency Management (OLEM)</fullName>
                    <label>OLEM</label>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>Office of Water (OW)</fullName>
                    <label>OW</label>
                </value>
                <value>
                    <fullName>Office of Administration and Resources Management (OARM)</fullName>
                    <isActive>false</isActive>
                    <label>OARM</label>
                </value>
                <value>
                    <fullName>Office of Environmental Information (OEI)</fullName>
                    <isActive>false</isActive>
                    <label>OEI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_EPA_Program_regulations__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Related EPA Program regulations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Note_1__c</fullName>
        <description>FTTA Application.</description>
        <label>Related Note 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Note_2__c</fullName>
        <description>FTTA Application.</description>
        <label>Related Note 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Note_3__c</fullName>
        <description>FTTA Application.</description>
        <label>Related Note 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FTTA Application.</description>
        <label>Related Record 1</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>EPA Agreements (Related Record 1)</relationshipLabel>
        <relationshipName>EPA_Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FTTA Application.</description>
        <label>Related Record 2</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>EPA Agreements (Related Record 2)</relationshipLabel>
        <relationshipName>EPA_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FTTA Application.</description>
        <label>Related Record 3</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>EPA Agreements (Related Record 3)</relationshipLabel>
        <relationshipName>EPA_Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Ceiling_to_be_Ordered__c</fullName>
        <formula>(Contract_Ceiling__c + Funding_Period_Ceiling__c ) - Total_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Ceiling to be Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Contract_Ceiling__c</fullName>
        <formula>(Contract_Ceiling__c +  Funding_Period_Ceiling__c ) - Line_Item_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Contract Ceiling to be Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Days__c</fullName>
        <description>Number of days remaining on the contract based on the End Date entered.</description>
        <formula>Perf_Per_End_Date__c - Today()</formula>
        <inlineHelpText>Number of days remaining on the contract based on the End Date entered.</inlineHelpText>
        <label>Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Days_in_Funding_Period__c</fullName>
        <formula>Funding_Period_End_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Days in Funding Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Days_on_Contract__c</fullName>
        <description>Number of days remaining on the contract based on the Contract End Date entered.</description>
        <formula>End_Date__c - Today()</formula>
        <inlineHelpText>Number of days remaining on the contract based on the Contract End Date entered.</inlineHelpText>
        <label>Remaining Days on Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Grant_Ceiling__c</fullName>
        <formula>Grant_Ceiling__c - Line_Item_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Grant Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_IA_Ceiling__c</fullName>
        <formula>IA_Ceiling__c - Line_Item_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining IA Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Fee_Rate__c</fullName>
        <description>FTTA License. Created to capture 'Royalty Fee/Rate'</description>
        <inlineHelpText>Please enter the Royalty 'Fee/Rate'.</inlineHelpText>
        <label>Royalty Fee/Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Business_Contract__c</fullName>
        <description>Returns 'TRUE' if the vendor's small business designation is not 'None' i.e. a small business.</description>
        <formula>NOT(ISPICKVAL( Vendor__r.Small_Business_Designation__c , "None"))</formula>
        <inlineHelpText>Checked if the vendor is a small business.</inlineHelpText>
        <label>Small Business Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Contract vehicles Start Date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Agreement Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <color>#E27001</color>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <color>#78C953</color>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Review in process</fullName>
                </value>
                <value>
                    <fullName>OGC review</fullName>
                    <color>#66E9BD</color>
                    <label>OGC review</label>
                </value>
                <value>
                    <fullName>OGC Concurrence</fullName>
                    <color>#A53711</color>
                    <label>OGC Concurrence</label>
                </value>
                <value>
                    <fullName>Signature Prep</fullName>
                </value>
                <value>
                    <fullName>At Signature</fullName>
                    <color>#0B24BE</color>
                    <label>At Signature</label>
                </value>
                <value>
                    <fullName>Out for Sign</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <color>#0B6FCE</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Not Pursued</fullName>
                    <color>#F3D904</color>
                    <label>Not Pursued</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <color>#A845DC</color>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                    <color>#641CCF</color>
                    <label>Terminated</label>
                </value>
                <value>
                    <fullName>Active-Amending</fullName>
                    <isActive>false</isActive>
                    <label>Active-Amending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>FTTA. Created to capture the termination date if the termination date when the agreement is terminated.</description>
        <inlineHelpText>Termination date of the EPA Agreement.</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Used in FTTA Application</description>
        <inlineHelpText>Research Title up to 255 characters</inlineHelpText>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_EPA_Inventor_Amount__c</fullName>
        <description>FTTA License Application. Created to capture the total amount from all related EPA Inventors</description>
        <label>Total EPA Inventor Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lab_Office_Amount__c</fullName>
        <description>FTTA License Application. Created to capture the total amount from all related lab/office.</description>
        <label>Total Lab / Office Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ordered__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** Automatically Calculated ** Aggregate of the Order Ceiling amounts associated with a Funding Period or a Total of all Order Ceilings associated with a Master Contract via associated funding periods.</description>
        <label>Total Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Royalties__c</fullName>
        <description>FTTA License. Created to capture the total royalties amount.</description>
        <inlineHelpText>Total Royalties Amount</inlineHelpText>
        <label>Total Royalties Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_partner_contribution__c</fullName>
        <description>Used in FTTA Application</description>
        <formula>Partner_cash_contribution__c  +  Partner_in_kind_contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total partner contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USTR_Completed__c</fullName>
        <description>Used in FTTA Application</description>
        <label>USTR Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USTR_Needed__c</fullName>
        <label>USTR Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Up_Front_Fee__c</fullName>
        <description>FTTA License. Create to capture Up-Front Fee.</description>
        <inlineHelpText>Please enter 'Up-Front Fee' for the EPA license.</inlineHelpText>
        <label>Up-Front Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <description>References the Organization Name from vendor records on the Organization (Account) object.</description>
        <formula>Vendor_Record__r.Name</formula>
        <inlineHelpText>Referenced from the Vendor Record reference (will not calculate until after the record is saved).</inlineHelpText>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Record__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Vendor (Organization) with which the contract vehicle is executed.</description>
        <label>Vendor Record</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Vendor lookup entry does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DCR EPA Agreements</relationshipLabel>
        <relationshipName>DCR_EPA_Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Vendor (Organization) with which the contract vehicle is executed.</description>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Vendor lookup entry does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DCR EPA Agreements</relationshipLabel>
        <relationshipName>DCR_EPA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Information on an EPA Agreement, initially used for FTTA, but also available for other uses.  (Note that the similarly named Agreement object has a Master-Detail relationship with Project, which limits the breadth of its potential use, whereas this object has no such Master-Detail relationship, so it can be used in more situations.)</description>
    <label>EPA Agreement</label>
    <nameField>
        <displayFormat>EPA-{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPA Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DCR_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number_No_Dashes__c</columns>
        <columns>Contract_Title__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Perf_Per_Start_Date__c</columns>
        <columns>Perf_Per_End_Date__c</columns>
        <columns>Contract_Ceiling__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.DCR_Contract_Vehicle</value>
        </filters>
        <label>DCR - Contracts</label>
    </listViews>
    <listViews>
        <fullName>DCR_Grants</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Grant_Number__c</columns>
        <columns>Grant_Title__c</columns>
        <columns>Perf_Per_Start_Date__c</columns>
        <columns>Perf_Per_End_Date__c</columns>
        <columns>Grant_Ceiling__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.DCR_Grant</value>
        </filters>
        <label>DCR - Grants</label>
    </listViews>
    <listViews>
        <fullName>DCR_IAs</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>IA_Number__c</columns>
        <columns>IA_Title__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Perf_Per_Start_Date__c</columns>
        <columns>Perf_Per_End_Date__c</columns>
        <columns>IA_Ceiling__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.DCR_IA</value>
        </filters>
        <label>DCR - IAs</label>
    </listViews>
    <listViews>
        <fullName>EPA_Licenses</fullName>
        <columns>NAME</columns>
        <columns>EPA_File_2__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>EPA_Amendment_2__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.FTTA_License</value>
        </filters>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>notEqual</operation>
            <value>Amendment,NDA</value>
        </filters>
        <label>FTTA Licenses</label>
    </listViews>
    <listViews>
        <fullName>FTTA_Agreements</fullName>
        <columns>NAME</columns>
        <columns>EPA_File_2__c</columns>
        <columns>Owner_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Agreement__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.FTTA_EPA_Agreement</value>
        </filters>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>notEqual</operation>
            <value>Amendment</value>
        </filters>
        <label>FTTA Agreements</label>
    </listViews>
    <listViews>
        <fullName>FTTA_Amendments_by_Agreements</fullName>
        <columns>NAME</columns>
        <columns>EPA_File_2__c</columns>
        <columns>Status__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>equals</operation>
            <value>Amendment</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.FTTA_EPA_Agreement</value>
        </filters>
        <label>FTTA Amendments by Agreements</label>
    </listViews>
    <listViews>
        <fullName>FTTA_Amendments_by_Licenses</fullName>
        <columns>NAME</columns>
        <columns>EPA_File_2__c</columns>
        <columns>Status__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>equals</operation>
            <value>Amendment</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EPA_Agreement__c.FTTA_License</value>
        </filters>
        <label>FTTA Amendments by Licenses</label>
    </listViews>
    <recordTypes>
        <fullName>DCR_Contract_Vehicle</fullName>
        <active>true</active>
        <description>DCR Contract Record Form</description>
        <label>DCR - Contract Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Contract_Vehicle_Funding_Period</fullName>
        <active>true</active>
        <description>Captures separate funding periods on a contract. Child record to DCR - Contract Vehicle records.</description>
        <label>DCR - Contract Vehicle Funding Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Grant</fullName>
        <active>true</active>
        <description>DCR Grant Record Form</description>
        <label>DCR - Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_IA</fullName>
        <active>true</active>
        <description>DCR IA Record Form</description>
        <label>DCR - IA</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_EPA_Agreement</fullName>
        <active>true</active>
        <label>FTTA Agreement/Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_License</fullName>
        <active>true</active>
        <description>FTTA License</description>
        <label>FTTA License</label>
    </recordTypes>
    <validationRules>
        <fullName>FTTA_Check_Dates_When_Active</fullName>
        <active>true</active>
        <description>FTTA. Created to check the values for the dates when status is made active.</description>
        <errorConditionFormula>IF(
	AND(
		OR(RecordType.DeveloperName = 'FTTA_EPA_Agreement',RecordType.DeveloperName = 'FTTA_License') , 
		ISPICKVAL(Status__c,'Active'), 
		ISCHANGED(Status__c), 
		Or(
		ISBLANK(Date_Signed__c),
		ISBLANK(Hardcopy_Recv_d_Date__c)
		)
	
	),
	TRUE,FALSE
)</errorConditionFormula>
        <errorMessage>Please select the 'Date Signed','Hardcopy Recv'd Date' for the agreement/license.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTTA_Check_OGC_Fields_When_Pending</fullName>
        <active>true</active>
        <description>FTTA. Created to validate if the OGC fields are not empty when the status is changed to pending.</description>
        <errorConditionFormula>IF(
AND(
RecordType.DeveloperName = 'FTTA_EPA_Agreement' ,
ISPICKVAL(Status__c,'Pending'),
ISCHANGED(Status__c),
Or(
ISBLANK(Lab_Contact__c),
ISBLANK(Principal_Investigator_1__c),
ISBLANK(Program_Manager_1__c)
)

),
TRUE,FALSE
)</errorConditionFormula>
        <errorMessage>Please select the 'OGC Attorney', 'OGC Review Needed', 'Lab contact', PM and PI for the agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTTA_Check_Owner_When_Assigned</fullName>
        <active>true</active>
        <description>FTTA. Created to validate if the owner field is not empty when the status is changed to assigned.</description>
        <errorConditionFormula>IF(
	AND(
		OR(RecordType.DeveloperName = 'FTTA_EPA_Agreement',RecordType.DeveloperName = 'FTTA_License') , 
		ISPICKVAL(Status__c,'Assigned'), 
		ISCHANGED( Status__c ), 
		ISBLANK(Owner_Contact__c)
	),
	TRUE,FALSE
)</errorConditionFormula>
        <errorMessage>Please select the 'Owner' for the agreement/license.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTTA_Validate_Amendment</fullName>
        <active>true</active>
        <description>FTTA. Created to check for the agreement type when amendment is created.</description>
        <errorConditionFormula>OR(
	AND(
	RecordType.DeveloperName ='FTTA_EPA_Agreement',
	NOT(ISBLANK( Agreement__c )),
	TEXT( Agreement_Type__c )&lt;&gt;'Amendment'
	),
	AND(
	RecordType.DeveloperName ='FTTA_License',
	NOT(ISBLANK( Agreement__c )),
	TEXT( License_Type__c  )&lt;&gt;'Amendment'
	)
)</errorConditionFormula>
        <errorMessage>Invalid Agreement/License type. Only Amendment can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FTTA_Validate_Amendment_to_Amendment</fullName>
        <active>true</active>
        <description>FTTA. Created to check if amendment is created to an amendment.</description>
        <errorConditionFormula>OR(
	AND(
	RecordType.DeveloperName ='FTTA_EPA_Agreement',
        NOT(ISBLANK( Agreement__r.Agreement__c )),
	TEXT( Agreement_Type__c )='Amendment'
	),
	AND(
	RecordType.DeveloperName ='FTTA_License',
        NOT(ISBLANK( Agreement__r.Agreement__c )),
	TEXT( License_Type__c  )='Amendment'
	)
)</errorConditionFormula>
        <errorMessage>Amendments cannot be created for an amendment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Check_OGC_Fields_When_Pending</fullName>
        <active>true</active>
        <description>FTTA License. Created to validate if the OGC fields are not empty when the status is changed to pending.</description>
        <errorConditionFormula>IF(
AND(
RecordType.DeveloperName = 'FTTA_License' ,
ISPICKVAL(Status__c,'OGC review'),
ISCHANGED(Status__c),
ISBLANK(OGC_Attorney__c )

),
TRUE,FALSE
)</errorConditionFormula>
        <errorMessage>Please select the 'OGC Attorney' for the license.</errorMessage>
    </validationRules>
</CustomObject>